--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
   # Separate build task as its more complex.  
   build-wasi:
     runs-on: ubuntu-latest
-    if: ${{ vars.COMPILE_WASI == 'true' }}
+    #if: ${{ vars.COMPILE_WASI == 'true' }}
 
     # Build WASM from source.
     steps:
