--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,8 +79,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: deploy # Dont really need but keep to avoid issue on issues.
-    # Skip pre-release
-    if: github.event_name == 'release' && github.event.action == 'released'
+    # Skip pre-release because cargo dont support pre-release tag.
+    if: !github.event.release.prerelease
 
     steps:
       - uses: actions/checkout@v4 # Required for release upload
