Fix local ignored test path

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ Cargo.lock
 *.pdb
 
 # Local test
-test/local/
+shader-sense/test/local/
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
