--- a/shader-sense/Cargo.toml
+++ b/shader-sense/Cargo.toml
@@ -11,7 +11,7 @@ readme = "../README.md"
 
 [dependencies]
 glslang = "0.6.0"
-naga = { version = "0.12.2", features = ["wgsl-in", "validate", "span"] }
+naga = { version = "24.0.0", features = ["wgsl-in"] }
 regex = "1.10.4"
 serde = { version = "1.0.199", features = ["derive"] }
 serde_json = "1.0.116"
