--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,27 +19,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4 # Required for release upload
       - name: Create release folder
-        run: mkdir -p ./bin-windows/ && mkdir -p ./bin-linux/ && mkdir -p ./bin-macos/ && mkdir -p ./bin-wasi/
-      - name: Download Windows desktop binary
+        run: mkdir -p ./bin-windows/ && mkdir -p ./bin-linux/ && mkdir -p ./bin-wasi/
+      - name: Download Windows x64 desktop binary
         uses: actions/download-artifact@v4
         with:
-          name: desktop-windows-latest
+          name: shader-language-server-x86_64-pc-windows-msvc
           path: ./bin-windows
-      - name: Download Linux desktop binary
+      - name: Download Linux x64 desktop binary
         uses: actions/download-artifact@v4
         with:
-          name: desktop-ubuntu-latest
+          name: shader-language-server-x86_64-unknown-linux-gnu
           path: ./bin-linux
-      - name: Download Mac desktop binary
-        uses: actions/download-artifact@v4
-        with:
-          name: desktop-macos-latest
-          path: ./bin-macos
       - name: Download WASI binary
         uses: actions/download-artifact@v4
-        #if: ${{ vars.COMPILE_WASI == 'true' }}
         with:
-          name: wasi
+          name: shader-language-server-wasm32-wasip1-threads
           path: ./bin-wasi
       - name: Download windows dxc dll.
         uses: robinraju/release-downloader@v1.11
@@ -59,20 +53,16 @@ jobs:
           out-file-path: './dxc-unix'
       - name: Copy dxc windows dll to bin.
         run: cp ./dxc/bin/x64/dxcompiler.dll ./bin-windows/dxcompiler.dll && cp ./dxc/bin/x64/dxil.dll ./bin-windows/dxil.dll
-      - name: Copy dxc linux library to bin.
+      - name: Copy dxc linux dynamic library to bin.
         run: cp ./dxc-unix/lib/libdxcompiler.so ./bin-linux/libdxcompiler.so && cp ./dxc-unix/lib/libdxil.so ./bin-linux/libdxil.so
-      - name: Copy dxc macos library to bin. # Not sure about this, no mac to test.
-        run: cp ./dxc-unix/lib/libdxcompiler.so ./bin-macos/libdxcompiler.so && cp ./dxc-unix/lib/libdxil.so ./bin-macos/libdxil.so
       - name: Zip Windows binary
-        run: zip -v -r -j shader-language-server-windows.zip ./bin-windows
+        run: zip -v -r -j shader-language-server-x86_64-pc-windows-msvc.zip ./bin-windows
       - name: Zip Linux binary
-        run: zip -v -r -j shader-language-server-linux.zip ./bin-linux
-      - name: Zip MacOS binary
-        run: zip -v -r -j shader-language-server-macos.zip ./bin-macos
+        run: zip -v -r -j shader-language-server-x86_64-unknown-linux-gnu.zip ./bin-linux
       - name: Zip WASI binary
-        run: zip -v -r -j shader-language-server-wasi.zip ./bin-wasi
+        run: zip -v -r -j shader-language-server-wasm32-wasip1-threads.zip ./bin-wasi
       - name: Upload release build
-        run: gh release upload ${{ github.ref_name }} shader-language-server-windows.zip shader-language-server-linux.zip shader-language-server-macos.zip shader-language-server-wasi.zip
+        run: gh release upload ${{ github.ref_name }} shader-language-server-x86_64-pc-windows-msvc.zip shader-language-server-x86_64-unknown-linux-gnu.zip shader-language-server-wasm32-wasip1-threads.zip
         env:
           GH_TOKEN: ${{ github.token }}
 
