Set env path to a valid clang for wasi

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -15,3 +15,8 @@ runner = "wasmtime --wasi threads=y --dir ../shader-sense/test::/test"
 # https://stackoverflow.com/questions/78556000/how-you-can-link-a-rust-library-with-c-c-and-wasm-bindgen-for-the-wasm32-unkno
 # https://github.com/rustwasm/wasm-bindgen/issues/3454
 rustflags = ["-Z", "wasm-c-abi=spec"]
+
+# Set this to your wasi-sdk compiler to avoid picking a clang version that does not support WASI (such as vs bundled version)
+#[env]
+#CC = "your/path/to/wasi-sdk/bin/clang.exe"
+#CXX = "your/path/to/wasi-sdk/bin/clang++.exe"
