Add CLI binary for shader-sense

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@
 members = [
     "shader-sense",
     "shader-language-server",
+    "shader-sense-cli",
     "shader-intrinsic-parser"
 ]
 resolver = "2"
