--- a/shader-sense-cli/Cargo.toml
+++ b/shader-sense-cli/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "shader-sense-cli"
+description = "Command line interface for shader validation and symbol inspection"
+repository = "https://github.com/antaalt/shader-sense"
+keywords = ["shader", "validate", "hlsl", "glsl", "wgsl"]
+categories = ["development-tools", "graphics"]
 version = "0.1.0"
 edition = "2021"
+license-file = "../LICENSE"
 
 [dependencies]
 colored = "3.0.0"
