--- a/shader-sense/Cargo.toml
+++ b/shader-sense/Cargo.toml
@@ -32,3 +32,4 @@ tree-sitter-wgsl-bevy = "=0.1.3"
 # There is an issue to compile DXC statically:
 # https://github.com/Traverse-Research/hassle-rs/issues/57
 hassle-rs = "0.11.0"
+libloading = "0.8.8"
