--- a/shader-language-server/Cargo.toml
+++ b/shader-language-server/Cargo.toml
@@ -23,5 +23,5 @@ serde_json = "1.0.116"
 cfg-if = "1.0.0"
 env_logger = "0.11.5"
 log = "0.4.22"
-lsp-server = "0.7.6"
+lsp-server = "=0.7.8" # 0.7.9 has some breaking changes.
 lsp-types = "0.95.0"
