--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,7 +2,8 @@
 # Single page size = 65536 bytes
 rustflags = [
   "-C", "link-arg=--initial-memory=10485760", # 65 536 * 160
-  "-C", "link-arg=--max-memory=67108864", # 65 536 * 1024
+  # This is a lot, but necessary because glslang has a HUGE memory footprint...
+  "-C", "link-arg=--max-memory=134217728", # 65 536 * 2048
   #"-C", "link-arg=--shared-memory",
   #"-C", "link-arg=--import-memory",
   #"-C", "link-arg=--export-memory",
