Update changelog & versions

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -15,6 +15,7 @@ runner = "wasmtime --wasi threads=y --dir ../shader-sense/test::/test"
 # Will have to wait until the issue is fixed in wasm32-unknown-unknown, god knows when.
 # https://stackoverflow.com/questions/78556000/how-you-can-link-a-rust-library-with-c-c-and-wasm-bindgen-for-the-wasm32-unkno
 # https://github.com/rustwasm/wasm-bindgen/issues/3454
+# Until now, it can be compiled by switching to nightly compiler `rustup default [stable|nightly]`
 rustflags = ["-Z", "wasm-c-abi=spec"]
 
 # Set this to your wasi-sdk compiler to avoid picking a clang version that does not support WASI (such as vs bundled version)
