Improve semantic token performances by using an LRU cache for avoiding recreating regex everytime and reducing the scope of regex search when we have it.

--- a/shader-language-server/Cargo.toml
+++ b/shader-language-server/Cargo.toml
@@ -26,3 +26,4 @@ log = "0.4.22"
 lsp-server = "=0.7.8" # 0.7.9 has some breaking changes.
 lsp-types = "0.95.0"
 crossbeam-channel = "0.5.8"
+lru = "0.16.0"
