Fix build ci on WASI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Copy dxc dll to target folder for tests.
         run: cp ./dxc/bin/x64/dxcompiler.dll ./target/debug/dxcompiler.dll && cp ./dxc/bin/x64/dxil.dll ./target/debug/dxil.dll
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --verbose # Test all package on windows.
 
   build-desktop:
     runs-on: ${{ matrix.os }}
@@ -61,8 +61,8 @@ jobs:
         with:
           toolchain: stable
           target: ${{ matrix.target }} # Make Rust compile to our target (defined in the matrix)
-      - name: Build desktop executable
-        run: cargo build --package shader_language_server --release --verbose --target ${{ matrix.target }} # Specify target to build into target
+      - name: Build desktop executable  # Build all package on supported os.
+        run: cargo build --release --verbose --target ${{ matrix.target }} # Specify target to build into target
       - name: Copy desktop executable
         run: mkdir -p ./bin/ && cp ./target/${{ matrix.target }}/release/${{ matrix.executable }} ./bin/${{ matrix.executable }}
       # TODO: Add debug symbols for supported target to bin folder.
@@ -103,12 +103,12 @@ jobs:
               clang-17 --version
       - name: Add target
         run: rustup target add wasm32-wasip1-threads
-      - name: Test WASI
-        run: cargo install wasmtime-cli && cargo test --target wasm32-wasip1-threads -- --nocapture
+      - name: Test WASI # Test only server & main library on WASI
+        run: cargo install wasmtime-cli && cargo test --package shader_language_server --package shader-sense --target wasm32-wasip1-threads -- --nocapture
         env: # Somehow this VM has clang14 by default, which is not supported...
           CC: clang-17
           CXX: clang++-17
-      - name: Build WASI executable
+      - name: Build WASI executable # Build only server on WASI
         run: cargo build --package shader_language_server --release --target wasm32-wasip1-threads --verbose
         env: # Somehow this VM has clang14 by default, which is not supported...
           CC: clang-17
