Skip doctest on wasi as they get OOM somehow and add module creation test.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,8 +103,8 @@ jobs:
               clang-17 --version
       - name: Add target
         run: rustup target add wasm32-wasip1-threads
-      - name: Test WASI # Test only server & main library on WASI
-        run: cargo install wasmtime-cli && cargo test --package shader_language_server --package shader-sense --target wasm32-wasip1-threads -- --nocapture
+      - name: Test WASI # Test only server & main library on WASI. Skip doc test as they are already done and somehow get OOM.
+        run: cargo install wasmtime-cli && cargo test --package shader_language_server --package shader-sense --all-targets --target wasm32-wasip1-threads -- --nocapture
         env: # Somehow this VM has clang14 by default, which is not supported...
           CC: clang-17
           CXX: clang++-17
