Add rustfmt component to toolchain to fix ci.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
+          components: rustfmt
       - name: Check formatting
         run: cargo fmt --check
       # Download dxc dll for tests.
